Fixed cropping of poster image on carousel

--- a/components/carousel/FeaturedView.less
+++ b/components/carousel/FeaturedView.less
@@ -140,8 +140,9 @@
                     width: 100%;
                     margin: 20px 0px;
                     margin-top: 50px;
+                    display: block;
                     img {
-                        height: auto;
+                        // height: auto;
                         margin: auto;
                     }
                 }
